[package]
authors = ["Reilly Wood"]
edition = "2021"
name = "reitunes-workspace"

[lib]
path = "src/lib.rs"

[workspace]
members = ["reitunes", "sonos-player"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.97"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde_rusqlite = "0.38.0"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["macros", "serde-well-known"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
indexmap = { version = "2.9.0", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive"] }
dirs = "6.0.0"
jiff = { version = "0.2.6", features = ["serde"] }
hostname = "0.4.1"
mime_guess = "2.0.5"
sha2 = "0.10.8"
reqwest = { version = "0.12.15", features = ["json"] }

[profile.release]
# lto = true      # Enable Link Time Optimization
opt-level = 'z' # Optimize for size.
panic = 'abort' # Abort on panic
# codegen-units = 1 # Set low to increase optimizations. Kills compile time though
# strip = true        # Strip symbols from binary. Big gains but idk if it's worth bad stack traces

# build with `cargo build --profile profiling`
# to analyze performance with tooling like linux perf
[profile.profiling]
inherits = "release"
strip = false
debug = true
