[package]
authors = ["Reilly Wood"]
edition = "2021"
name = "reitunes-workspace"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde_rusqlite.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indexmap.workspace = true
clap.workspace = true
dirs.workspace = true
jiff.workspace = true
hostname.workspace = true
mime_guess.workspace = true
sha2.workspace = true
reqwest.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rand.workspace = true

[workspace]
members = ["reitunes", "sonos-player"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.97"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde_rusqlite = "0.38.0"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["macros", "serde-well-known"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
indexmap = { version = "2.9.0", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive"] }
dirs = "6.0.0"
jiff = { version = "0.2.6", features = ["serde"] }
hostname = "0.4.1"
mime_guess = "2.0.5"
sha2 = "0.10.8"
reqwest = { version = "0.12.15", features = ["json"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"
rand = "0.8.5"

[profile.release]
# lto = true      # Enable Link Time Optimization
opt-level = 'z' # Optimize for size.
panic = 'abort' # Abort on panic
# codegen-units = 1 # Set low to increase optimizations. Kills compile time though
# strip = true        # Strip symbols from binary. Big gains but idk if it's worth bad stack traces

# build with `cargo build --profile profiling`
# to analyze performance with tooling like linux perf
[profile.profiling]
inherits = "release"
strip = false
debug = true
