[package]
name = "reitunes-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde_rusqlite = "0.35.0"
uuid = {version = "1.10.0", features = ["serde"]}
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.95"
time = { version = "0.3", features = ["macros", "serde-well-known"] }
axum = "0.7.5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
