[package]
name = "reitunes"
description = "Reilly Wood's personal music library, Rust edition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde_rusqlite = "0.36.0"
uuid = {version = "1.16.0", features = ["serde"]}
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["macros", "serde-well-known"] }
axum = { version = "0.8.3", features = ["ws"] }
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tower-livereload = "0.9.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
indexmap = { version = "2.9.0", features = ["serde"] }
askama = {version = "0.13.0", features = ["serde_json"]  }
clap = { version = "4.5.35", features = ["derive"] }
dirs = "6.0.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
jiff = { version = "0.2.6", features = ["serde"] }
hostname = "0.4.1"
rust-embed = { version = "8.7.0", features = ["axum-ex"] }
mime_guess = "2.0.5"
tower-cookies = "0.11.0"
axum-macros = "0.5.0"
sha2 = "0.10.8"
openssl = { version = "0.10.72", features = ["vendored"] }
