[package]
name = "reitunes"
description = "Reilly Wood's personal music library, Rust edition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reitunes-workspace = { path = ".." }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
mime_guess.workspace = true
dirs.workspace = true
axum = { version = "0.8.3", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tower-livereload = "0.9.6"
askama = {version = "0.13.0", features = ["serde_json"]  }
rig-core = { version = "0.14.0", features = ["derive"] }
rust-embed = { version = "8.7.0", features = ["axum-ex"] }
tower-cookies = "0.11.0"
axum-macros = "0.5.0"
openssl = { version = "0.10.72", features = ["vendored"] }
schemars = "0.8.22"
vite-rs = "0.2.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

