[package]
name = "sonos-player"
description = "Reitunes Sonos client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.87"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde_rusqlite = "0.36.0"
uuid = {version = "1.12.1", features = ["serde", "v4"]}
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
time = { version = "0.3", features = ["macros", "serde-well-known"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
indexmap = { version = "2.5.0", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0.1"
jiff = { version = "0.1.12", features = ["serde"] }
hostname = "0.4.0"
mime_guess = "2.0.4"
sha2 = "0.10.8"
wez-sonos = "0.1.0"
rand = "0.8.5"
urlencoding = "2.1.3"
ratatui = "0.24.0"
crossterm = {version = "0.27.0", features = ["event-stream"]}
directories = "5.0"
lazy_static = "1.4"
futures = "0.3.30"
reqwest = { version = "0.11", features = ["json"] }
