[package]
name = "sonos-player"
description = "Reitunes Sonos client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reitunes-workspace = { path = ".." }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
clap.workspace = true
rusqlite.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wez-sonos = "0.1.0"
urlencoding = "2.1.3"
ratatui = "0.24.0"
crossterm = {version = "0.27.0", features = ["event-stream"]}
directories = "5.0"
lazy_static = "1.4"
futures = "0.3.30"
tracing-error = "0.2"
